feat(update-enterprise): new handler update enterprise by cnpj
